# docs/swagger.json
@@ -197,14 +197,14 @@
                 }
             }
         },
-        "/api/contact/create": {
-            "post": {
+        "/api/contacts/get": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "create contact_post",
+                "description": "get  contacts",
                 "consumes": [
                     "application/json"
                 ],
@@ -214,24 +214,13 @@
                 "tags": [
                     "Contact"
                 ],
-                "summary": "Create Contact",
-                "operationId": "create-contact_post",
-                "parameters": [
-                    {
-                        "description": "home info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Contact"
-                        }
-                    }
-                ],
+                "summary": "Get contacts",
+                "operationId": "get-contacts",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.ResponseSuccess"
+                            "$ref": "#/definitions/handler.allContacts"
                         }
                     },
                     "400": {
@@ -244,12 +233,6 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponseData"
                         }
                     },
                     "500": {
@@ -369,7 +352,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.HomeFull"
                         }
                     },
                     "400": {
@@ -431,7 +414,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.HomeFull"
                         }
                     },
                     "400": {
@@ -720,7 +703,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.NewsFull"
                         }
                     },
                     "400": {
@@ -782,7 +765,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.NewsFull"
                         }
                     },
                     "400": {
@@ -1071,7 +1054,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.ServiceFull"
                         }
                     },
                     "400": {
@@ -1133,7 +1116,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.ServiceFull"
                         }
                     },
                     "400": {
@@ -1422,7 +1405,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.TableFull"
                         }
                     },
                     "400": {
@@ -1484,7 +1467,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.getAllListsResponse"
+                            "$ref": "#/definitions/model.TableFull"
                         }
                     },
                     "400": {
@@ -1670,6 +1653,71 @@
                     }
                 }
             }
+        },
+        "/contact/create": {
+            "post": {
+                "description": "create contact_post",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contact"
+                ],
+                "summary": "Create Contact",
+                "operationId": "create-contact_post",
+                "parameters": [
+                    {
+                        "description": "home info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Contact"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponseData"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1679,6 +1727,17 @@
                 "data": {},
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.allContacts": {
+            "type": "object",
+            "properties": {
+                "allContact": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.ContactFull"
+                    }
                 }
             }
         },
@@ -1699,17 +1758,6 @@
                 }
             }
         },
-        "handler.getAllListsResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.HomeFull"
-                    }
-                }
-            }
-        },
         "model.Admin": {
             "type": "object",
             "properties": {
@@ -1726,9 +1774,6 @@
         "model.Contact": {
             "type": "object",
             "properties": {
-                "date": {
-                    "type": "string"
-                },
                 "firstName": {
                     "type": "string"
                 },
@@ -1742,6 +1787,32 @@
                     "type": "string"
                 },
                 "typeService": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ContactFull": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "type_service": {
                     "type": "string"
                 }
             }
@@ -1783,6 +1854,29 @@
                 }
             }
         },
+        "model.NewsFull": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "post_body": {
+                    "type": "string"
+                },
+                "post_date": {
+                    "type": "string"
+                },
+                "post_img_path": {
+                    "type": "string"
+                },
+                "post_img_url": {
+                    "type": "string"
+                },
+                "post_title": {
+                    "type": "string"
+                }
+            }
+        },
         "model.NewsPost": {
             "type": "object",
             "properties": {
@@ -1797,10 +1891,56 @@
                 }
             }
         },
+        "model.ServiceFull": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "post_body": {
+                    "type": "string"
+                },
+                "post_date": {
+                    "type": "string"
+                },
+                "post_img_path": {
+                    "type": "string"
+                },
+                "post_img_url": {
+                    "type": "string"
+                },
+                "post_title": {
+                    "type": "string"
+                }
+            }
+        },
         "model.ServicePost": {
             "type": "object",
             "properties": {
                 "post_body": {
+                    "type": "string"
+                },
+                "post_img_url": {
+                    "type": "string"
+                },
+                "post_title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.TableFull": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "post_body": {
+                    "type": "string"
+                },
+                "post_date": {
+                    "type": "string"
+                },
+                "post_img_path": {
                     "type": "string"
                 },
                 "post_img_url": {
