# model/contacting.go
@@ -7,12 +7,19 @@ import (
 )
 
 type Contact struct {
-	ID          int    `json:"-" `
 	FirstName   string `json:"" `
 	LastName    string `json:""`
-	Text        string `json:""`
 	PhoneNumber string `json:""`
 	TypeService string `json:""`
+	Text        string `json:""`
+}
 
-	Date string `json:""`
+type ContactFull struct {
+	ID          int    `json:"id" db:"id"`
+	FirstName   string `json:"first_name" db:"first_name"`
+	LastName    string `json:"last_name" db:"last_name"`
+	PhoneNumber string `json:"phone_number" db:"phone_number"`
+	TypeService string `json:"type_service" db:"type_service"`
+	Text        string `json:"text" db:"text"`
+	Created_At  string `json:"created_at" db:"created_at"`
 }
